<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.eclipse.jetty.tck</groupId>
  <artifactId>servlet-tck-run</artifactId>
  <version>1.0.0-SNAPSHOT</version>

  <name>tck-build</name>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <maven.compiler.release>11</maven.compiler.release>
    <junit.version>5.8.2</junit.version>
    <slf4j.version>1.7.36</slf4j.version>
    <jetty.version>11.0.8</jetty.version> <!-- 11.0.9-SNAPSHOT -->
    <surefire.version>3.0.0-M6-SNAPSHOT</surefire.version> <!-- 3.0.0-M6-SNAPSHOT -->
    <jakarta.tck.version>10.0.0-SNAPSHOT</jakarta.tck.version>
    <fork.argLine>-Xmx8g -Xms4g</fork.argLine>
  </properties>

  <dependencyManagement>
    <dependencies>
      <dependency>
        <groupId>org.junit</groupId>
        <artifactId>junit-bom</artifactId>
        <version>${junit.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
      <dependency>
        <groupId>org.eclipse.jetty</groupId>
        <artifactId>jetty-bom</artifactId>
        <version>${jetty.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>jakartatck</groupId>
      <artifactId>servlet</artifactId>
      <version>${jakarta.tck.version}</version>
    </dependency>
    <dependency>
      <groupId>org.jboss.arquillian.container</groupId>
      <artifactId>arquillian-jetty-embedded-11</artifactId>
      <version>1.0.0.Final-SNAPSHOT</version>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-deploy</artifactId>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>jetty-annotations</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>apache-jsp</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.eclipse.jetty</groupId>
      <artifactId>glassfish-jstl</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.vintage</groupId>
      <artifactId>junit-vintage-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- needed for intellij -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>jakartatck</groupId>
      <artifactId>libutil</artifactId>
      <version>10.0.0-SNAPSHOT</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-api</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jcl-over-slf4j</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>jul-to-slf4j</artifactId>
      <version>${slf4j.version}</version>
    </dependency>
    <dependency>
      <groupId>org.slf4j</groupId>
      <artifactId>slf4j-simple</artifactId>
      <version>${slf4j.version}</version>
    </dependency>

    <dependency>
      <groupId>org.jboss.arquillian.junit5</groupId>
      <artifactId>arquillian-junit5-container</artifactId>
      <version>1.7.0.Alpha10</version>
      <scope>test</scope>
    </dependency>

  </dependencies>

  <build>
    <pluginManagement>
      <plugins>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-clean-plugin</artifactId>
          <version>3.1.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-resources-plugin</artifactId>
          <version>3.0.2</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.8.0</version>
        </plugin>
        <plugin>
          <groupId>org.apache.maven.plugins</groupId>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>${surefire.version}</version>
          <dependencies>
<!--            <dependency>-->
<!--              <groupId>org.junit.jupiter</groupId>-->
<!--              <artifactId>junit-jupiter-engine</artifactId>-->
<!--              <version>${junit.version}</version>-->
<!--            </dependency>-->
<!--            <dependency>-->
<!--              <groupId>org.apache.maven.surefire</groupId>-->
<!--              <artifactId>surefire-junit-platform</artifactId>-->
<!--              <version>${surefire.version}</version>-->
<!--            </dependency>-->
            <dependency>
              <groupId>org.junit.platform</groupId>
              <artifactId>junit-platform-launcher</artifactId>
              <version>1.8.2</version>
            </dependency>
            <dependency>
              <groupId>jakartatck</groupId>
              <artifactId>junit5-extensions</artifactId>
              <version>${jakarta.tck.version}</version>
            </dependency>

          </dependencies>
          <configuration>
            <!-- this need some times to run -->
            <argLine>${fork.argLine} -Duser.language=en -Duser.country=US -Djava.locale.providers=COMPAT,CLDR</argLine>
            <forkedProcessTimeoutInSeconds>15000</forkedProcessTimeoutInSeconds>
            <includeJUnit5Engines>
              <includeJUnit5Engine>jakarta-tck-test-engine</includeJUnit5Engine>
            </includeJUnit5Engines>
            <excludeJUnit5Engines>
              <excludeJUnit5Engine>junit-vintage</excludeJUnit5Engine>
              <excludeJUnit5Engine>junit-jupiter</excludeJUnit5Engine>
            </excludeJUnit5Engines>
            <dependenciesToScan>
              <dependenciesToScan>jakartatck:servlet</dependenciesToScan>
            </dependenciesToScan>
            <includes>
              <include>**/URLClient*</include>
              <include>**/Client*</include>
<!--              <include>**/jakarta_servlet/servletresponsewrapper/URLClient*</include>-->
            </includes>
            <trimStackTrace>false</trimStackTrace>
          </configuration>
        </plugin>
      </plugins>
    </pluginManagement>
<!--    <plugins>-->
<!--      <plugin>-->
<!--        <groupId>de.sormuras.junit</groupId>-->
<!--        <artifactId>junit-platform-maven-plugin</artifactId>-->
<!--        <version>1.1.6</version>-->
<!--        <extensions>true</extensions>-->
<!--        <configuration>-->
<!--&lt;!&ndash;          <executor>JAVA</executor>&ndash;&gt;-->
<!--          <isolation>NONE</isolation>-->
<!--        </configuration>-->
<!--        <dependencies>-->
<!--          <dependency>-->
<!--            <groupId>jakartatck</groupId>-->
<!--            <artifactId>junit5-extensions</artifactId>-->
<!--            <version>${jakarta.tck.version}</version>-->
<!--          </dependency>-->
<!--          <dependency>-->
<!--            <groupId>jakartatck</groupId>-->
<!--            <artifactId>servlet</artifactId>-->
<!--            <version>${jakarta.tck.version}</version>-->
<!--          </dependency>-->
<!--        </dependencies>-->
<!--      </plugin>-->
<!--    </plugins>-->
  </build>

  <pluginRepositories>
    <pluginRepository>
      <id>apache.snapshots</id>
      <url>https://repository.apache.org/content/groups/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </pluginRepository>
  </pluginRepositories>
  <repositories>
    <repository>
      <id>apache.snapshots</id>
      <url>https://repository.apache.org/content/groups/snapshots</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>
</project>
